# vitalsync

./: .gitignore  CMakeLists.txt  README.md
include/: config_manager.h  i_data_manager.h  i_data_provider.h  i_parameter_model.h  i_parameter_view.h  i_waveform_model.h  i_waveform_view.h  vital_sync_types.h
src/: main.cpp
src/core/: config_manager.cpp  data_manager.cpp  data_manager.h  parameter_model.cpp  parameter_model.h  waveform_model.cpp  waveform_model.h
src/providers/: demo_data_provider.cpp  demo_data_provider.h
src/ui/: main_window.cpp  main_window.h  provider_config_dialog.cpp  provider_config_dialog.h  settings_dialog.cpp  settings_dialog.h
src/ui/parameters/: parameter_view.cpp  parameter_view.h
src/ui/waveforms/: waveform_view.cpp  waveform_view.h
